# GameOfLifeWebGL

./: Cargo.toml  index.html
shaders/: fragment_shader_gol.glsl  fragment_shader_kernel_circle.glsl  fragment_shader_kernel_geminium.glsl  fragment_shader_kernel_orbium.glsl  fragment_shader_kernel_smooth_circle.glsl  fragment_shader_kernel_square.glsl  fragment_shader_lenia.glsl  fragment_shader_ltl.glsl  fragment_shader_primordia.glsl  fragment_shader_primordia_time.glsl  fragment_shader_top.glsl
src/: fragment_shader.glsl  fragment_shader_gol.glsl  fragment_shader_lenia.glsl  fragment_shader_ltl.glsl  fragment_shader_primordia.glsl  fragment_shader_primordia_time.glsl  kernel.txt  lib.rs  vertex_shader.glsl
